--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
 			"Formandsystem\\Api": "src/"
 		}
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "stable",
+	"require-dev": {
+		"phpspec/phpspec": "2.0.*@dev"
+	}
 }
