--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,9 @@ php:
 
 before_script:
   - composer self-update
-  - composer install --prefer-source --no-interaction --dev
 
 install:
-  - COMPOSER_ROOT_VERSION=dev-master composer install --prefer-source
+  - composer install --prefer-source --no-interaction --dev
 
 script:
-  
+  - vendor/bin/phpspec run -v
