--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: php
 
 php:
-  - 5.4
-  - 5.5
   - 5.6
 
 before_script:
@@ -10,7 +8,6 @@ before_script:
 
 install:
   - composer install --prefer-source --no-interaction --dev
-  - COMPOSER_ROOT_VERSION=dev-master composer install --prefer-source
 
 script:
-  - bin/phpspec run -v
+  - vendor/bin/phpspec run -v
